# OpenRV

./: CHANGELOG.md
.github/actions/build-linux/: action.yml
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-windows.yml  ci.yml  release-pr.yml
cmake/defaults/: cxx_clang_defaults.cmake  rv_options.cmake
cmake/dependencies/: ffmpeg.cmake
cmake/macros/: FINDNDI_SDK.cmake
docs/rv-manuals/rv-reference-manual/: rv-reference-manual-chapter-sixteen.md
src/lib/app/RvCommon/: CMakeLists.txt  DesktopVideoDevice.cpp  GLView.cpp  QTGLVideoDevice.cpp  RvApplication.cpp  RvDocument.cpp
src/lib/app/TwkApp/: Application.cpp  VideoDevice.cpp
src/lib/app/mu_rvui/: mode_manager.mu
src/lib/base/RVMath/: CMakeLists.txt  LogC.cpp
src/lib/base/TwkDeploy/: CMakeLists.txt  Deploy.cpp
src/lib/base/TwkExc/: CMakeLists.txt  Exception.cpp
src/lib/base/TwkMath/: CMakeLists.txt  Noise.cpp
src/lib/base/stl_ext/: CMakeLists.txt  block_alloc_arena.cpp  fixed_block_allocator.cpp  fixed_block_arena.cpp  string_algo.cpp  thread_group.cpp
src/lib/graphics/TwkMTLF/: CMakeLists.txt
src/lib/image/MovieFFMpeg/: MovieFFMpeg.cpp
src/lib/ip/IPCore/: CMakeLists.txt  ImageRenderer.cpp  MetalContext.cpp  Session.cpp  ShaderFunction.cpp  ShaderProgram.cpp
src/plugins/output/: CMakeLists.txt
src/plugins/output/BlackMagicDevices/: StereoVideoFrame.cpp
src/plugins/output/NDI/: CMakeLists.txt  NDIModule.cpp  NDIOutput.cpp  NDIVideoDevice.cpp
src/plugins/output/NDI/NDI/: NDIModule.h  NDIVideoDevice.h
src/plugins/rv-packages/annotate/: PACKAGE
src/plugins/rv-packages/annotate_toolbar/: PACKAGE
src/plugins/rv-packages/otio_reader/: PACKAGE  annotation_hook.py  compare_hook.py  (+2 more)
(+21 files in other folders)
